--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,6 @@
 
 /* Your CSS Code here. */
-      #evaluatedText {
-        width: 500px;
-        height: 200px;
-      }
-      #wordCount {
-        font-size: 18px;
-        font-weight: bold;
-      }
+  textarea {
+  width: 500px;
+  height: 150px;
+}
